[gd_scene load_steps=7 format=3 uid="uid://c18ffbmk0tb2e"]

[ext_resource type="Script" uid="uid://b8ymijoj8ndg8" path="res://Scenes/UI/UI.gd" id="1_b83rk"]
[ext_resource type="LabelSettings" uid="uid://pvrhfinc7kcc" path="res://Scenes/UI/UI.tres" id="2_b83rk"]
[ext_resource type="FontFile" uid="uid://j0j2y445cv1u" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_akgwn"]
[ext_resource type="AudioStream" uid="uid://drqiou2avr7w5" path="res://assets/audio/score.wav" id="3_b83rk"]

[sub_resource type="LabelSettings" id="LabelSettings_akgwn"]
font = ExtResource("3_akgwn")
font_size = 42
outline_size = 13
outline_color = Color(1, 0.572549, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_b83rk"]
font = ExtResource("3_akgwn")
font_size = 60
font_color = Color(0.632201, 0.354546, 2.88785e-07, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b83rk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 80.0
offset_bottom = 43.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "000"
label_settings = ExtResource("2_b83rk")

[node name="PressLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press "
label_settings = SubResource("LabelSettings_akgwn")

[node name="GameOver" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_b83rk")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_b83rk")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
